o.txt
"make" -f nbproject/Makefile-Debug.mk QMAKE= SUBPROJECTS= .build-conf
make[1]: Entering directory '/home/kurt/NetBeansProjects/23tree-in-cpp'
"make"  -f nbproject/Makefile-Debug.mk dist/Debug/GNU-Linux/23tree-in-cpp
make[2]: Entering directory '/home/kurt/NetBeansProjects/23tree-in-cpp'
mkdir -p build/Debug/GNU-Linux
rm -f "build/Debug/GNU-Linux/debug.o.d"
g++ -std=c++14   -c -g -MMD -MP -MF "build/Debug/GNU-Linux/debug.o.d" -o build/Debug/GNU-Linux/debug.o debug.cpp
mkdir -p build/Debug/GNU-Linux
rm -f "build/Debug/GNU-Linux/main.o.d"
g++ -std=c++14   -c -g -MMD -MP -MF "build/Debug/GNU-Linux/main.o.d" -o build/Debug/GNU-Linux/main.o main.cpp
mkdir -p build/Debug/GNU-Linux
rm -f "build/Debug/GNU-Linux/test.o.d"
g++ -std=c++14   -c -g -MMD -MP -MF "build/Debug/GNU-Linux/test.o.d" -o build/Debug/GNU-Linux/test.o test.cpp
test.cpp: In member function ‘tree23<int, int>::iterator reverse_iterator_sim::base_nonconst()’:
test.cpp:14:42: error: cannot bind ‘tree23<int, int>::iterator’ lvalue to ‘tree23<int, int>::iterator&&’
   tree23<int, int>::iterator iter_temp = current; 
                                          ^
In file included from include/test.h:4:0,
                 from test.cpp:1:
include/tree23.h:1050:41: note:   initializing argument 1 of ‘tree23<Key, Value>::iterator::iterator(tree23<Key, Value>::iterator&&) [with Key = int; Value = int]’
 template<class Key, class Value> inline tree23<Key, Value>::iterator::iterator(iterator&& lhs) : \
                                         ^
nbproject/Makefile-Debug.mk:78: recipe for target 'build/Debug/GNU-Linux/test.o' failed
make[2]: *** [build/Debug/GNU-Linux/test.o] Error 1
make[2]: Leaving directory '/home/kurt/NetBeansProjects/23tree-in-cpp'
nbproject/Makefile-Debug.mk:61: recipe for target '.build-conf' failed
make[1]: *** [.build-conf] Error 2
make[1]: Leaving directory '/home/kurt/NetBeansProjects/23tree-in-cpp'
nbproject/Makefile-impl.mk:39: recipe for target '.build-impl' failed
make: *** [.build-impl] Error 2
